[gd_scene load_steps=8 format=3 uid="uid://7pghfa3p3xct"]

[ext_resource type="Script" uid="uid://xfubooyu28t2" path="res://memory.gd" id="1_jcsct"]
[ext_resource type="PackedScene" uid="uid://bqa17cwda7xyk" path="res://elements/card.tscn" id="1_kh0cx"]
[ext_resource type="Texture2D" uid="uid://bkv1ehweyo036" path="res://assets/Cards (medium)/card_hearts_05.png" id="2_amsxb"]
[ext_resource type="Texture2D" uid="uid://cxtyyy6asav34" path="res://assets/Cards (medium)/card_spades_08.png" id="3_jcsct"]
[ext_resource type="Texture2D" uid="uid://vlh0s2c50ujd" path="res://assets/Cards (medium)/card_diamonds_10.png" id="4_cvvc2"]
[ext_resource type="Texture2D" uid="uid://cm5g7qhjvalad" path="res://assets/Cards (medium)/card_hearts_Q.png" id="5_776no"]
[ext_resource type="Texture2D" uid="uid://bq4bkglcgyjft" path="res://assets/Cards (medium)/card_spades_J.png" id="6_k0cjh"]

[node name="Memory" type="Node2D"]
script = ExtResource("1_jcsct")

[node name="Game" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="Game"]
layout_mode = 0
offset_left = 364.0
offset_top = 30.0
offset_right = 1150.0
offset_bottom = 614.0
columns = 4

[node name="Card" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2

[node name="Card2" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("2_amsxb")
card_value = "5_hearts"

[node name="Card3" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("3_jcsct")
card_value = "8_spades"

[node name="Card4" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("4_cvvc2")
card_value = "10_diamonds"

[node name="Card5" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("5_776no")
card_value = "Q_hearts"

[node name="Card6" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("6_k0cjh")
card_value = "J_spades"

[node name="Card7" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2

[node name="Card8" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("6_k0cjh")
card_value = "J_spades"

[node name="Card9" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("3_jcsct")
card_value = "8_spades"

[node name="Card10" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("5_776no")
card_value = "Q_hearts"

[node name="Card11" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("4_cvvc2")
card_value = "10_diamonds"

[node name="Card12" parent="Game/GridContainer" instance=ExtResource("1_kh0cx")]
layout_mode = 2
card_front = ExtResource("2_amsxb")
card_value = "5_hearts"

[node name="FlipTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="card_selected" from="Game/GridContainer/Card" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card2" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card3" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card4" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card5" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card6" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card7" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card8" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card9" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card10" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card11" to="." method="card_clicked"]
[connection signal="card_selected" from="Game/GridContainer/Card12" to="." method="card_clicked"]
[connection signal="timeout" from="FlipTimer" to="." method="_on_flip_timer_timeout"]
